[package]
name = "bbs-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
base64 = "0.21.5"
bbs_plus = "0.18.0"
blake2 = "0.10.6"
dock_crypto_utils = "0.16.0"
libc = "0.2.150"
once_cell = "1.18.0"
schnorr_pok = "0.16.0"
swift-bridge = "0.1.52"

[build-dependencies]
swift-bridge-build = "0.1.52"


[lib]
name = "bbs"
crate-type = ["staticlib"]
